--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@ body {
     font-family: 'open sans Condensed';
     padding: 20px 60px;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+* {
+    box-sizing: border-box;
+}
